default/concourse/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ci-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-tristan.moe-issue
spec:
  rules:
    - host: ci.tristan.moe
      http:
        paths:
          - backend:
              serviceName: concourse-web
              servicePort: 8080
  tls:
    - hosts:
        - ci.tristan.moe
      secretName: letsencrypt-cert-ci.tristan.moe
